# ChessGame

./: CMakeLists.txt  main.cpp  readme.md
account/: AccountManager.cpp  AccountManager.h
ai/: AI.cpp  AI.h  HeuristicAI.cpp  HeuristicAI.h  RandomAI.cpp  RandomAI.h
controller/: Command.cpp  Command.h  GameManager.cpp  GameManager.h
facade/: GameFacade.cpp  GameFacade.h
model/: AbstractGame.cpp  AbstractGame.h  Board.cpp  Board.h  GameMemento.cpp  GameMemento.h  Go.h  GoRule.cpp  GoRule.h  Gomoku.h  GomokuRule.cpp  GomokuRule.h  Othello.cpp  Othello.h  OthelloRule.cpp  OthelloRule.h  Rule.h
network/: NetworkClient.cpp  NetworkClient.h  NetworkProtocol.cpp  NetworkProtocol.h  NetworkServer.cpp  NetworkServer.h
recording/: GameRecorder.cpp  GameRecorder.h
utils/: Type.h
view/: GameView.cpp  GameView.h
